# RESUM_FLEX

./: .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml
core/: __init__.py  mfgp_pipeline.py  networks.py  optimizer.py  scaling.py  surrogate_cnp.py  surrogate_mfgp.py  training.py
data/: __init__.py  pseudo_generator.py
schemas/: __init__.py  config.py  data_models.py
scripts/: phase1_plot_ground_truth.py  phase2_plot_latent.py  phase3_plot_reconstruction.py  phase4_plot_mfgp.py  phase5_plot_optimizer.py
tests/: test_cnp.py  test_cnp_recovery.py  test_mfgp.py  test_mfgp_pipeline.py  test_mfgp_recovery.py  test_networks.py  test_optimizer.py  test_pseudo_generator.py  test_scaling.py  test_schemas.py  test_training.py  test_viz_dispatch.py
viz/: __init__.py  dispatch.py
viz_output/: encoder_shape_table.txt
